<resources>
    <string name="app_name">kefu</string>
    <string name="action_settings">Settings</string>
    <string name="buttom_1">首页</string>
    <string name="buttom_2">资讯</string>
    <string name="buttom_3">扫一扫</string>
    <string name="buttom_4">社区</string>
    <string name="buttom_5">我的</string>
    <string name="kefu">carefor</string>
    <string name="xml_test_data">要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n要知道，一块芝士蛋糕(100g)，也就350kcal左右?\n</string>
</resources>
